Configured countries and minimized primitive obsession.